<resources>
    <string name="app_name">Kinship</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required">Can not be empty</string>
    <string name="title_language">Language</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="faq">FAQ</string>
    <string name="edit_pro">Edit Profile</string>
    <string name="logout">Log Out</string>
    <string name="chat">Chat</string>
    <string name="inbox">Inbox</string>
    <string name="submit">Submit</string>
    <string name="me">Me</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="how_can_i_help_you">How can I help you?</string>
    <string name="all_your_work_in_one_place">All your work in one place</string>
    <string name="yes_i_can_join">Yes, I can Join</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="send_code">Send code</string>
    <string name="cancel">Cancel</string>
    <string name="e_g_i_need_a_leave">e. g. I need a leave</string>
    <string name="bangla">Bangla</string>
    <string name="english">English</string>
    <string name="read_full_story">Read full story</string>
    <string name="company_name">Company name</string>
    <string name="name">Name</string>
    <string name="type_a_new_password">Type a new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="request_for_account">Request for account</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome&#160;</string>
    <string name="position">Position</string>
    <string name="department">Department</string>
    <string name="company">Company</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="nid">National ID</string>
    <string name="joining_date">Joining Date</string>
    <string name="job_type">Job Type</string>
    <string name="emergency_phone">Emergency Phone</string>
    <string name="blood_group">Blood Group</string>
    <string name="photo_uploader">Photo uploader</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="camera_roll">Upload photo from camera roll</string>
    <string name="permission_needed">All permissions needed to be granted to use this application!</string>
    <string name="ok">OK</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change password</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="uploading">Uploading photo...</string>
    <string name="photo_upload_aborted">Photo upload aborted</string>
    <string name="empty_inbox">Inbox Empty</string>
    <string name="empty_inbox_details">Your inbox is empty, you will see messages here when they arrive</string>
    <string name="finish">Finish</string>
    <string name="file_provider">ai.kinship.app.fileprovider</string>
    <string name="select_date">Select date</string>
    <string name="pass_suggestion">We need your registered email address or phone number to send your password verification code</string>
    <string name="resend">Resend code</string>
    <string name="code_sent">A security code has been sent to your email/phone</string>
    <string name="code">Security code</string>
    <string name="error">Error</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="congrats">Congratulations</string>
    <string name="password_updated">your password is successfully updated, now you can login with your new password</string>
    <string name="factory">Factory</string>
    <string name="load_more">Load more</string>
    <string name="unable">Unable to log in with provided credentials.</string>

</resources>
