<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_home_selected"
        android:title="@string/home"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/item_chat"
        android:icon="@drawable/ic_chat_selected"
        android:title="@string/chat"
        app:showAsAction="always"></item>


    <item
        android:id="@+id/item_inbox"
        android:icon="@drawable/ic_inbox_selected"
        android:title="@string/inbox"></item>

    <item
        android:id="@+id/item_me"
        android:icon="@drawable/ic_me_selected"
        android:title="@string/me"></item>

</menu>