<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.authentication.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/ivKutumBita"
            android:layout_width="@dimen/hundread_forty_dp"
            android:layout_height="@dimen/thirty_five_dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/hundread_dp"
            android:src="@drawable/kutumbita_without_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passWraper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/thirty_dp"
            android:layout_marginRight="@dimen/thirty_dp"
            app:passwordToggleEnabled="true">

            9lfHcJ9P

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/circularstd_book"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/fifteen_sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--talha@kutumbita.com-->
        <!--Password : oGLYW5L1-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"

            android:layout_above="@+id/passWraper"
            android:layout_marginLeft="@dimen/thirty_dp"
            android:layout_marginRight="@dimen/thirty_dp"
            android:layout_marginBottom="@dimen/ten_dp">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/circularstd_book"
                android:hint="@string/email_or_phone"
                android:text="sabbir@kutumbita.com"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/fifteen_sp" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bSignIn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixty_dp"
            android:layout_below="@+id/passWraper"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginRight="@dimen/sixty_dp"
            android:background="@color/primaryColor"
            android:fontFamily="@font/circularstd_book"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/fifteen_sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bForgotPassword"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_dp"
            android:layout_below="@+id/bSignIn"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_marginRight="@dimen/sixty_dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/circularstd_book"
            android:text="@string/forgot_your_password"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/fifteen_sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bReqForAccount"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_dp"
            android:layout_below="@+id/bForgotPassword"
            android:layout_marginLeft="@dimen/sixty_dp"
            android:layout_marginRight="@dimen/sixty_dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/circularstd_book"
            android:text="@string/request_for_account"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/fifteen_sp" />

    </RelativeLayout>
</ScrollView>